Mash: Make Chrome update correct window's properties for immersive.

This makes ShelfLayoutManager::UpdateVisibilityState correctly update
state to SHELF_AUTO_HIDE, which triggers Shelf::AutoHideEventHandler,
which already works without updates.

Bug: 897968

Change-Id: Id2e5f785dbf24a0999088b13fe4971ee6758e32e
Reviewed-on: https://chromium-review.googlesource.com/c/1295176
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601809}
Former-commit-id: 828cedfdbb8333005fd1caad46ffc24ab53507e3